--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,28 @@
 {
-  "name": "app",
+  "name": "boilerplate-backbone-require",
   "authors": [
-    "Ivan Perez <ivan.perez@displaynote.com>"
+    "Ivan Perez <info@ivanchuk.com>"
   ],
-  "description": "",
-  "main": "",
+  "description": "Boilerplate project using RequireJS-based modules with BackboneJS",
+  "main": "build/index.html",
   "moduleType": [
     "amd"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/ivanchuk/boilerplate-backbone-require/#readme",
   "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "libs"
   ],
   "dependencies": {
     "jquery-dist": "^2.1.3",
     "backbone": "^1.2.3",
-    "requirejs": "^2.1.22"
+    "requirejs": "^2.1.22",
+    "PageSlider": "*"
   }
 }
