--- a/package.json
+++ b/package.json
@@ -1,26 +1,6 @@
 {
-  "name": "app",
+  "name": "boilerplate-backbone-require",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "grunt tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/user/repository.git"
-  },
-  "keywords": [
-    "some",
-    "key",
-    "words"
-  ],
-  "author": "Ivan Perez <ivan.perez@displaynote.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/user/repository/issues"
-  },
-  "homepage": "https://github.com/user/repository#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.0",
