--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "jquery-dist": "^2.1.3",
     "backbone": "^1.2.3",
     "requirejs": "^2.1.22",
-    "PageSlider": "*"
+    "PageSlider": "*",
+    "text": "requirejs-text#^2.0.14"
   }
 }
